--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "less-middleware": "~2.2.1",
+    "mongodb": "^3.1.8",
+    "mongoose": "^5.3.5",
     "morgan": "~1.9.0"
   }
 }
