--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -12,6 +13,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "less-middleware": "~2.2.1",
+    "mocha": "^5.2.0",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.5",
     "morgan": "~1.9.0"
